--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <main>
         <div id="conteiner">
-            <div id="visor"><h1 id="text">Clique para começar!</h1></div>
+            <div id="visor"><h1 id="text">Carlos Augusto!</h1></div>
         
             <div class="jogo">
                 <div id="btn-1"></div>
